tests/diagnostics/declarations/types/duplicate_field/expect.txt
# exit: 1
lib.coppice:3:5: error: duplicate field 'id' in 'User'
      id: string,
      ^
